--- a/conversion.html
+++ b/conversion.html
@@ -5,54 +5,40 @@
   <div class="topnav">
     <a class="active" href="./conversion.html">Assignment #1</a>
     <a href="./tax.html">Assignment #2</a>
-    <a href="./calculator.html">Assignment #3</a>
-    <a href="./payroll.html">Assignment #4</a>
+    <a href="./calculator.html">Assignment 3</a>
+    <a href="./payroll.html">Assignment 4</a>
   </div>
 </ul>
+
 <h1>Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to Meters)</h1>
+
+<h2>Celsius to Fahrenheit</h2>
 <p>
-
-<h2> Celcius to Fahrenheit</h2>
-
-<p><input id="c" onkeyup="convert('C')"> Celsius</p>
-
-<p><input id="f" onkeyup="convert('F')"> Fahrenheit</p> 
-
+    <label>Celsius</label>
+    <input id="inputCelsius" type="number" placeholder="Celsius" oninput="temperatureConverter(this.value)" onchange="temperatureConverter(this.value)">
+  </p>
+  <p>Fahrenheit: <span id="outputFahrenheit"></span></p>
 <script>
-function convert(degree) {
-  var x;
-  if (degree == "C") {
-    x = document.getElementById("c").value * 9 / 5 + 32;
-    document.getElementById("f").value = Math.round(x);
-  } else {
-    x = (document.getElementById("f").value -32) * 5 / 9;
-    document.getElementById("c").value = Math.round(x);
-  }
+    function temperatureConverter(valNum) {
+  valNum = parseFloat(valNum);
+  document.getElementById("outputFahrenheit").innerHTML=(valNum*1.8)+32;
+}
+</script>
+<h2>Fahrenheit to Celsius</h2>
+<p>
+    <label>Fahrenheit</label>
+    <input id="inputFahrenheit" type="number" placeholder="Fahrenheit"
+    oninput="temperatureConverter1(this.value)"
+    onchange="temperatureConverter1(this.value)">
+  </p>
+  <p>Celsius: <span id="outputCelsius"></span></p>
+<script>
+    function temperatureConverter1(valNum) {
+  valNum = parseFloat(valNum);
+  document.getElementById("outputCelsius").innerHTML = (valNum-32) / 1.8;
 }
 </script>
 
-</body>
-</html>
-<body>
-
-  <h2>Fahrenheit to Celcius </h2>
-  
-  <p>
-    <label>Fahrenheit</label>
-    <input id="inputFahrenheit" type="number" placeholder="Fahrenheit" oninput="temperatureConverter(this.value)" onchange="temperatureConverter(this.value)">
-  </p>
-  <p>Celcius: <span id="outputCelcius"></span></p>
-  
-  <script>
-  function temperatureConverter(valNum) {
-    valNum = parseFloat(valNum);
-    document.getElementById("outputCelcius").innerHTML=(valNum-32)/1.8;
-  }
-  </script>
-  
-  </body>
-
-</script>
 <h2>Feet to Meters Length Converter</h2>
 <!-- Meters to Feet -->
 <p>
