--- a/conversion.html
+++ b/conversion.html
@@ -3,14 +3,14 @@
 <body>
 
   <div class="topnav">
-    <a class="active" href="./conversion.html">Assignment #1</a>
+    <a href="./conversion.html">Assignment #1</a>
     <a href="./tax.html">Assignment #2</a>
     <a href="./calculator.html">Assignment 3</a>
     <a href="./payroll.html">Assignment 4</a>
   </div>
 </ul>
 
-<h1>Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to Meters)</h1>
+<h1 > Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius,Meters to Feet, Feet to Meters)
 
 <h2>Celsius to Fahrenheit</h2>
 <p>
