--- a/home navbar.html
+++ b/home navbar.html
@@ -5,16 +5,22 @@
     <title>Responsive Navbar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
   <nav>
-    <label 
-    class="logo">DwighTech</label>
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+      <i class="fas fa-bars"></i>
+    </label>
+    <label class="logo">DwighTech</label>
     <ul>
       <li><a href="#">Assignment 1</a></li>
       <li><a href="#">Assignment 2</a></li>
       <li><a href="#">Assignment 3</a></li>
       <li><a href="#">Assignment 4</a></li>
+      <ul>
     </nav> 
-</body>
+    <section></section>
+  </body>
 </html>
