--- a/calculator.html
+++ b/calculator.html
@@ -1,1 +1,16 @@
-ASSIGNMENT 2
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Calculator</title>
+</head>
+<body>
+  <label for="variable-n">Net Taxable Income</label><br>
+  <input type="number" id="variable-n" name="variable-n" value="0"><br>
+
+  <label for="factorial-of-n">Income Tax</label>
+  <input type="number" id="factorial-of-n" name="factorial-of-n" value="0" readonly><br>
+</body>
+</html>
