--- a/conversion.html
+++ b/conversion.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <title>Conversion</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 3em;
+    }
+  </style>
+</head>
 <body>
-
-  <div class="topnav">
-    <a href="./conversion.html">Assignment #1</a>
-    <a href="./tax.html">Assignment #2</a>
-    <a href="./calculator.html">Assignment 3</a>
-    <a href="./payroll.html">Assignment 4</a>
-  </div>
-</ul>
-
-<h1 > Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius,Meters to Feet, Feet to Meters)
 
 <h2>Celsius to Fahrenheit</h2>
 <p>
