--- a/home navbar.html
+++ b/home navbar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir=ltr">
 <head>
+
     <meta charset="utf-8">
     <title>Responsive Navbar</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,12 +16,23 @@
     </label>
     <label class="logo">DwighTech</label>
     <ul>
-      <li><a href="#">Assignment 1</a></li>
-      <li><a href="#">Assignment 2</a></li>
-      <li><a href="#">Assignment 3</a></li>
-      <li><a href="#">Assignment 4</a></li>
+      <li><a href="./conversion.html">Assignment 1</a></li> 
+      <li><a href="./calculator.html ">Assignment 2</a></li>
+      <li><a href="./factorial.html">Assignment 3</a></li>
+      <li><a href="./payroll.html">Assignment 4</a></li>
       <ul>
-    </nav> 
+    </nav>
+
+    <div 
+    style="
+    background-color: black;
+    color: white;
+    padding: 2em;
+    ">
+      <h2 style="text-align: center;">INTRODUCTION TO COMPUTING</h2>\
+      <h2 style="text-align: center;">by</h2>\
+      <h2 style="text-align: center;">DWIGHT ANTHONY C. BUMA-AT</h2>\
+    </div>
     <section></section>
   </body>
 </html>
