--- a/calculator.html
+++ b/calculator.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Income Tax Calculator</title>
+  <style>
+    * {
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background-image: url("./bg2.jpg");
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+    nav {
+      margin-bottom: 3em;
+    }
+
+    main {
+      padding-left: 3em
+    }
+
+    .output {
+      margin-bottom: 1em;
+    }
+
+  </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculator</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-  <label for="variable-n">Net Taxable Income</label><br>
-  <input type="number" id="variable-n" name="variable-n" value="0"><br>
+  <nav>
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+      <i class="fas fa-bars"></i>
+    </label>
+    <label class="logo">DwighTech</label>
+    <ul>
+      <li><a href="./conversion.html">Assignment 1</a></li> 
+      <li><a href="./calculator.html ">Assignment 2</a></li>
+      <li><a href="./factorial.html">Assignment 3</a></li>
+      <li><a href="./payroll.html">Assignment 4</a></li>
+    <ul>
+  </nav>
 
-  <label for="factorial-of-n">Income Tax</label>
-  <input type="number" id="factorial-of-n" name="factorial-of-n" value="0" readonly><br>
+  <main>
+    DIRI MAG SUGOD OG CODE ASSIGNMENT 2
+  </main>
 </body>
 </html>
