--- a/payroll.html
+++ b/payroll.html
@@ -1,1 +1,57 @@
-ASSIGNMENT 4
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Income Tax Calculator</title>
+  <style>
+    * {
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background-image: url("./bg2.jpg");
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+    nav {
+      margin-bottom: 3em;
+    }
+
+    main {
+      padding-left: 3em
+    }
+
+    .output {
+      margin-bottom: 1em;
+    }
+
+  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</head>
+<body>
+  <nav>
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+      <i class="fas fa-bars"></i>
+    </label>
+    <label class="logo">DwighTech</label>
+    <ul>
+      <li><a href="./conversion.html">Assignment 1</a></li> 
+      <li><a href="./calculator.html ">Assignment 2</a></li>
+      <li><a href="./factorial.html">Assignment 3</a></li>
+      <li><a href="./payroll.html">Assignment 4</a></li>
+    <ul>
+  </nav>
+
+  <main>
+    
+    DIRI MAGSUGOD OG CODE ASSIGNMENT 4
+
+
+  </main>
+</body>
+</html>
