change color theme

--- a/calculator.html
+++ b/calculator.html
@@ -27,6 +27,8 @@
       margin-bottom: 1em;
     }
 
+    
+
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -38,7 +40,10 @@
     <label for="check" class="checkbtn">
       <i class="fas fa-bars"></i>
     </label>
-    <label class="logo">DwighTech</label>
+
+    <div id="ButtonDwight">
+      <label class="logo"><a class="logo" href="home navbar.html">DwighTech</a></label>
+
     <ul>
       <li><a href="./conversion.html">Assignment 1</a></li> 
       <li><a href="./calculator.html ">Assignment 2</a></li>
@@ -100,5 +105,5 @@
       const incomeTax = (x - excess)*rate + fixed
       result.innerHTML = 'The income tax is '+ incomeTax
     }
-  </script
+  </script>
 </body>
