--- a/conversion.html
+++ b/conversion.html
@@ -14,7 +14,11 @@
       background-size: cover;
       background-repeat: no-repeat;
     }
-
+    #ButtonDwight{
+        text-decoration: none;
+        margin-top: 3px;
+        
+    }
     nav {
       margin-bottom: 3em;
     }
@@ -27,6 +31,7 @@
       margin-bottom: 1em;
     }
 
+
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -34,12 +39,14 @@
 </head>
 <body>
   <nav>
-    <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
       <i class="fas fa-bars"></i>
     </label>
-    <label class="logo">DwighTech</label>
+    <div id="ButtonDwight">
+        <label class="logo"><a class="logo" href="home navbar.html">DwighTech</a></label>
+    
     <ul>
+
       <li><a href="./conversion.html">Assignment 1</a></li> 
       <li><a href="./calculator.html ">Assignment 2</a></li>
       <li><a href="./factorial.html">Assignment 3</a></li>
