--- a/home navbar.html
+++ b/home navbar.html
@@ -26,8 +26,8 @@
 
     <div 
     style="
-    background-color: black;
-    color: white;
+    background-color: #4b0908;
+    color: #fbca03;
     padding: 2em;
     ">
       <h2 style="text-align: center;">INTRODUCTION TO COMPUTING</h2>\
