--- a/conversion.html
+++ b/conversion.html
@@ -108,7 +108,7 @@
 <p>
   <br>
     <label>Meters</label>
-    <input id="inputMeters" type="number" placeholder="w3" oninput="LengthConverter(this.value)" onchange="LengthConverter(this.value)">
+    <input id="inputMeters" type="number" placeholder="" oninput="LengthConverter(this.value)" onchange="LengthConverter(this.value)">
   </p>
   <p class="output">Feet: <span id="outputFeet"></span></p>
 <script>
